--- a/src/frontend/templates/login.html
+++ b/src/frontend/templates/login.html
@@ -73,7 +73,7 @@ limitations under the License.
           <div class="col-lg-6 offset-lg-3">
             <div class="card">
               <div class="card-body">
-                <h5><strong>New!</strong> 0.20% APY on all new checking accounts. <a href="/signup">Sign up today.</a></h5>
+                <h5><strong>🌈 New!</strong> 0.20% APY on all new checking accounts. <a href="/signup">Sign up today.</a></h5>
               </div>
             </div>
           </div>
